2.1.0:

Tue May  3 09:09:07 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - driver.list: add Powerware 3110 support, through genericups type=7

   (Paul Andreassen) [Alioth Patch #301573]

 - upscode2: merge this driver for Fiskars, Compaq and Powerware
   devices.

   (Niels Baggesen, Havard Lygre) [Alioth Patch #301144]

 - newhidups, libhid, libusb: improve UBS support. Interrupt and
   device reconnexion are now supported.

Mon May  2 11:14:40 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - configure, man/Makefile: check which USB manpage(s) to install
 - man/Makefile: suppress snmp-ups duplication

 - pwmib.h, snmp-ups.ch8, driver.list: add Powerware MIB support for
   Powerware devices with ConnectUPS SNMP cards

   (Olli Salvia) [Alioth Patch #301568]

Fri Apr 29 16:03:22 UTC 2005 / Arnaud Quette <arnaud.quette@free.fr>

 - apcsmart: fix APC600 support, and bump driver release to 1.99.7

   (?) [Alioth Patch #301287]

Thu Apr 28 18:03:22 UTC 2005 / Arnaud Quette <arnaud.quette@free.fr>

 - configure.in, drivers/Makefile: check which USB driver(s) to build

Mon Apr 25 22:03:22 UTC 2005 / Arnaud Quette <arnaud.quette@free.fr>

 - Makefiles: add LDFLAGS support
 - drivers/Makefile.in: remove unneeded STRLCPY flag for newhidups

Sun Apr 24 19:03:22 UTC 2005 / Arnaud Quette <arnaud.quette@free.fr>

 - etapro.c: fix brokeness due to ser_get_line use

   (Marek Michalkiewicz) [Alioth Patch #301505]

Sat Apr 23 19:34:22 UTC 2005 / Arnaud Quette <arnaud.quette@free.fr>

 - cyberpower.c: add CyberPower 1000AVR support
 - driver.list: complete the missing CyberPower models

   (Dave Huang) [Alioth Patch #301288]

 - drivers/main.c: move upsdrv_initups() to point after become_user().
   This makes clear error message when user has no write privilege
   on the device.
 
   (?) [Alioth Patch #301284]

Fri Apr 22 11:42:22 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>

 - bcmxcp.ch8: reintegrate the new BCM/XCP driver (0.08) ; adjust